// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute price endpoint rest should return success 1`] = `
Object {
  "data": Object {
    "result": 239.255,
  },
  "result": 239.255,
  "statusCode": 200,
  "timestamps": Object {
    "providerDataReceived": 1641035471111,
    "providerDataRequested": 1641035471111,
  },
}
`;

exports[`execute price endpoint websocket should return success 1`] = `
Object {
  "data": Object {
    "result": 170,
  },
  "result": 170,
  "statusCode": 200,
  "timestamps": Object {
    "providerDataReceived": 1668165071111,
    "providerDataStreamEstablished": 1668165071111,
  },
}
`;
